--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "next": "^13.5.4",
     "postcss": "^8.4.31",
     "react": "18.2.0",
+    "react-aria": "^3.29.1",
     "react-dom": "18.2.0",
+    "resend": "^1.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
