--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@nextui-org/react": "^2.1.13",
+    "@react-email/button": "^0.0.11",
+    "@react-email/components": "^0.0.2",
+    "@react-email/html": "^0.0.6",
+    "@react-email/render": "^0.0.8",
+    "@react-email/tailwind": "0.0.11",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -28,6 +33,7 @@
     "react": "18.2.0",
     "react-aria": "^3.29.1",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.5",
     "resend": "^1.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
